<resources>
    <string name="app_name">Galeria de ecosistema</string>
    <string name="codigo_hint">Tipo de ecosistema</string>
    <string name="descripcion_hint">"Descripcion "</string>
    <string name="precio_hint">"Lugar "</string>
    <string name="btn_alta">"subir descripcion de imagen "</string>
    <string name="btn_baja">"eliminar descripcion de imagen "</string>
    <string name="btn_buscar_codigo">"Buscar por tipo "</string>
    <string name="btn_buscar_descripcion">"Buscar por descripción "</string>
    <string name="btn_actualizar">Actualizar descripcion</string>
</resources>