<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/eco1"
    tools:context=".MainActivity">


    <EditText
        android:id="@+id/et_codigo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:background="@drawable/ic_launcher_background"
        android:backgroundTint="@color/teal_200"
        android:ems="10"
        android:hint="@string/codigo_hint"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_descripcion"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/ic_launcher_background"
        android:ems="10"
        android:hint="@string/descripcion_hint"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_codigo" />

    <EditText
        android:id="@+id/et_precio"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/ic_launcher_background"
        android:ems="10"
        android:hint="@string/precio_hint"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_descripcion" />

    <Button
        android:id="@+id/btn_alta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_alta"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_precio" />

    <Button
        android:id="@+id/btn_baja"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_baja"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_alta" />

    <Button
        android:id="@+id/btn_buscar_codigo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_buscar_codigo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_baja" />

    <Button
        android:id="@+id/btn_buscar_descripcion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_buscar_descripcion"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_buscar_codigo" />

    <Button
        android:id="@+id/btn_actualizar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_actualizar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_buscar_descripcion" />

    <Button
        android:id="@+id/info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Imagen 1 "
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_actualizar" />

    <Button
        android:id="@+id/info2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="imagen 2"
        app:layout_constraintStart_toEndOf="@+id/info"
        app:layout_constraintTop_toBottomOf="@+id/btn_actualizar" />

    <Button
        android:id="@+id/info3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="imagen 3"
        app:layout_constraintStart_toEndOf="@+id/info2"
        app:layout_constraintTop_toBottomOf="@+id/btn_actualizar" />

    <Button
        android:id="@+id/info4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:text="Imagen 4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/info" />

    <Button
        android:id="@+id/info5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="imagen 5"
        app:layout_constraintStart_toEndOf="@+id/info4"
        app:layout_constraintTop_toBottomOf="@+id/info2" />

    <Button
        android:id="@+id/info6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="imagen 6"
        app:layout_constraintStart_toEndOf="@+id/info5"
        app:layout_constraintTop_toBottomOf="@+id/info3" />

</androidx.constraintlayout.widget.ConstraintLayout>